feat(AI): Add AI-Service